--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "lpa5s",
   "version": "0.1.0",
+  "homepage": "https://karol-gwizdala.github.io/lpa5s",
   "private": true,
   "dependencies": {
     "@picocss/pico": "^1.5.12",
@@ -17,6 +18,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,5 +43,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
+  
 }
